# Reader-for-Android

./: .gitignore  README.md  gradle.properties  settings.gradle.kts
.claude/: loop.md  scheduled_tasks.json  settings.json
.claude/commands/: loop.md  reader-android-loop.md  real-source-loop.md  ui-loop.md
_archived_planning_2026-06-24/docs_PLANNING/: ANDROID_BLOCKERS_AND_DECISIONS.md  ANDROID_CAPABILITY_IMPLEMENTATION_STATUS.md  ANDROID_CAPABILITY_ROADMAP.md  ANDROID_S1_S6_BASELINE.md  (+22 more)
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  reader_jni.cpp  reader_native_runtime_evidence.cpp
docs/: CAP-5JS14_BRIDGE_BACKED_RUNTIME_POLICY_REPORT.json  CAP-5JS15_BRIDGE_ADAPTER_POLICY_ENFORCEMENT_REPORT.json  CAP-5JS15_BRIDGE_ADAPTER_POLICY_ENFORCEMENT_SUMMARY.json  CODE_WIKI.md  bottom-bar-derivatives-audit.md  bottom-bar-derivatives-final-reaudit.md  bottom-bar-derivatives-from-master-fix-report.md  bottom-bar-derivatives-reaudit.md  bottom-bar-derivatives-unified-component-fix-report.md  bottom-bar-derivatives-v2-generation-report.md  canonical-controls-template-audit.md  canonical-reading-baseline-audit.md  control-reference-template-arrow-fixed-reaudit.md  control-reference-template-audit.md  control-reference-template-p1-fixed-reaudit.md  control-reference-template-p1-reaudit.md  quick-action-brightness-hidden-fix-report.md  quick-action-derivatives-audit.md  quick-action-derivatives-reaudit.md  stitch-ui-audit-report.md
scripts/: audit_ui_handoff.py  audit_ui_image_text_specs.py  generate_reading_interactive_prototype.py  generate_reading_planned_drafts.py
(+1863 files in other folders)
